<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2008 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->

<!-- The attributes in this XML file provide configuration information -->
<!-- for the Input Method Manager. -->

<!-- TODO: use <lang>_keyboard icon instead of a common keyboard icon. -->
<!-- "AsciiCapable" is kept in extra values, as per recommendation in Android documentation -->
<!-- Note: SupportTouchPositionCorrection extra value is obsolete and maintained for backward
     compatibility. -->
<!-- If IME doesn't have an applicable subtype, the first subtype will be used as a default
     subtype.-->
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:settingsActivity="helium314.keyboard.settings.SettingsActivity"
        android:isDefault="@bool/im_is_default"
        android:supportsSwitchingToNextInputMethod="true"
        android:supportsInlineSuggestions="true"
        tools:targetApi="r">
    <subtype android:icon="@drawable/sym_keyboard_language_switch_lxx"
        android:label="@string/subtype_en_US"
        android:subtypeId="0xc9194f98"
        android:imeSubtypeLocale="en_US"
        android:languageTag="en-US"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection,EmojiCapable"
        android:isAsciiCapable="true"
        />
    <subtype android:icon="@drawable/sym_keyboard_language_switch_lxx"
        android:label="@string/subtype_en_GB"
        android:subtypeId="0xb045e755"
        android:imeSubtypeLocale="en_GB"
        android:languageTag="en-GB"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="TrySuppressingImeSwitcher,AsciiCapable,SupportTouchPositionCorrection,EmojiCapable"
        android:isAsciiCapable="true"
    />
    <subtype android:icon="@drawable/sym_keyboard_language_switch_lxx"
        android:label="@string/subtype_generic"
        android:subtypeId="0x456d04f2"
        android:imeSubtypeLocale="ko"
        android:languageTag="ko"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=MAIN:korean,CombiningRules=hangul,SupportTouchPositionCorrection,EmojiCapable"
        android:isAsciiCapable="false"
    />
	<subtype android:icon="@drawable/sym_keyboard_language_switch_lxx"
        android:label="@string/subtype_generic_phonetic"
        android:subtypeId="0x3f5a9c12"
        android:imeSubtypeLocale="ko"
        android:languageTag="ko"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=MAIN:korean_phonetic,CombiningRules=hangul,SupportTouchPositionCorrection,EmojiCapable"
        android:isAsciiCapable="false"
    />
    <subtype android:icon="@drawable/sym_keyboard_language_switch_lxx"
        android:label="@string/subtype_generic_sebeolsik_390"
        android:subtypeId="0xb0bbe261"
        android:imeSubtypeLocale="ko"
        android:languageTag="ko"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=MAIN:korean_sebeolsik_390,CombiningRules=hangul,SupportTouchPositionCorrection,EmojiCapable"
        android:isAsciiCapable="false"
    />
    <subtype android:icon="@drawable/sym_keyboard_language_switch_lxx"
        android:label="@string/subtype_generic_sebeolsik_final"
        android:subtypeId="0xb6774038"
        android:imeSubtypeLocale="ko"
        android:languageTag="ko"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="KeyboardLayoutSet=MAIN:korean_sebeolsik_final,CombiningRules=hangul,SupportTouchPositionCorrection,EmojiCapable"
        android:isAsciiCapable="false"
    />
</input-method>
